--- a/NoiseGateAnalysis/NoiseGate.csproj
+++ b/NoiseGateAnalysis/NoiseGate.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Indicators.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SlewLimiter.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
