--- a/VstNoiseGate/VstNoiseGate.vcxproj.filters
+++ b/VstNoiseGate/VstNoiseGate.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="NoiseGateKernel2.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="SlewLimiter.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\..\dev\vst_sdk2_4\vstsdk2.4 clean\public.sdk\source\vst2.x\audioeffect.cpp">
